@@ -65,6 +65,7 @@ test_programs =					\
 	atomic-test				\
 	array-test				\
 	base64-test				\
+	bit-test				\
 	$(CXX_TEST)				\
 	child-test				\
 	completion-test				\
@@ -130,6 +131,7 @@ module_ldadd = $(libgmodule) $(G_MODULE_LIBS) $(progs_ldadd)
 atomic_test_LDADD = $(progs_ldadd)
 array_test_LDADD = $(progs_ldadd)
 base64_test_LDADD = $(progs_ldadd)
+bit_test_LDADD = $(progs_ldadd)
 bookmarkfile_test_LDADD = $(progs_ldadd)
 child_test_LDADD = $(thread_ldadd)
 completion_test_LDADD = $(progs_ldadd)
